tests/e2e/pass/m29_void.ep
# EXIT: 0
# STDOUT: AB
fun write_a(): void {
    putstr("A")
    return
    putstr("X")
}
fun write_b(): void {
    putstr("B")
}
fun main(): void {
    write_a()
    write_b()
}
