tests/e2e/fail/cstr_source_type.ep
# COMPILE_ERROR: unknown type 'cstr'
fun expose(value: cstr): void {
}

fun main(): void {
}
